# WqSat_atcor

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
notebooks/: acolite.ipynb
wqsat_atcor/: __init__.py
