[metadata]
name = wqsat_atcor
summary = Designed to apply atmospheric corrections to Sentinel-2 and Sentinel-3 imagery using the ACOLITE software
description-file = 
    README.md
author = Daniel Garcia-Diaz & Fernando Aguilar (IFCA / CSIC)
author-email = (garciad & aguilarf) @ifca.unican.es
version = 0.1.0
license = Apache License 2.0
home-page = https://github.com/garciadd/WqSat_atcor.git
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10

[files]
packages =
    wqsat_atcor
